--- a/templates/dashboards/reseller/components/lead-modal.html
+++ b/templates/dashboards/reseller/components/lead-modal.html
@@ -1,6 +1,6 @@
 <!-- Modal for adding/editing leads -->
 <div class="modal fade" id="addLeadModal" tabindex="-1" aria-labelledby="addLeadModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
+<div class="modal-dialog modal-lg modal-fullscreen-sm-down">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="addLeadModalLabel">Add New Lead</h5>
