--- a/templates/dashboards/reseller/layouts/includes/reseller-header.html
+++ b/templates/dashboards/reseller/layouts/includes/reseller-header.html
@@ -1,6 +1,6 @@
 <header class="reseller-header">
     <div class="header-left">
-        <button class="sidebar-toggle" id="headerToggleBtn" title="Toggle Sidebar">
+<button class="sidebar-toggle d-lg-none" id="headerToggleBtn" title="Menu" type="button" data-bs-toggle="offcanvas" data-bs-target="#mobileMenu" aria-controls="mobileMenu" aria-label="Open menu">
             <i class="fas fa-bars"></i>
         </button>
         <div class="welcome-text">
